Fixed overflow issue with forms.

--- a/static/forms.css
+++ b/static/forms.css
@@ -8,12 +8,13 @@ body {
 form {
     width: calc(90% - 100px);
     max-width: 600px;
-    min-height: calc(90vh - 100px);
+    height: calc(90vh - 100px);
     padding: 50px;
     margin: 10vh auto 0px auto;
     background: linear-gradient(0deg, #202020, #2f2f2f, #333);
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
+    overflow-y: scroll;
 
     -webkit-box-shadow: 0px 5px 35px -10px rgba(0,0,0,0.85);
     -moz-box-shadow: 0px 5px 35px -10px rgba(0,0,0,0.85);
@@ -26,6 +27,10 @@ form {
     left: 0;
     bottom: 0;
     right: 0;
+}
+
+form::-webkit-scrollbar {
+    width: 0px;
 }
 
 form.unload {
